[gd_scene load_steps=4 format=3 uid="uid://dtfkbntqcc3g4"]

[ext_resource type="Script" path="res://scenes/hud.gd" id="1_s2til"]
[ext_resource type="AudioStream" uid="uid://cxfwfgwcwkbn5" path="res://audio/click.wav" id="2_0ptl6"]

[sub_resource type="Shortcut" id="Shortcut_3knyk"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_s2til")

[node name="MessageNode" type="Node2D" parent="."]
visible = false
position = Vector2(288, 384)

[node name="Shape" type="ColorRect" parent="MessageNode"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -272.0
offset_top = -104.0
offset_right = 296.0
grow_horizontal = 2
grow_vertical = 0
color = Color(0.101961, 0, 0.529412, 1)

[node name="Message" type="Label" parent="MessageNode/Shape"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -276.0
offset_top = 8.0
offset_right = 276.0
offset_bottom = 64.0
grow_horizontal = 2
text = "Ceci est un message de test assez grand pour d√©passer la taille d'une seule ligne un peu sans aucun sens."
autowrap_mode = 3
max_lines_visible = 2

[node name="HFlowContainer" type="HFlowContainer" parent="MessageNode/Shape"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -632.0
offset_top = -40.0
offset_right = -8.0
offset_bottom = -8.0
grow_horizontal = 0
grow_vertical = 0
alignment = 2

[node name="Action1Button" type="Button" parent="MessageNode/Shape/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
shortcut = SubResource("Shortcut_3knyk")
text = "Action1"

[node name="Action2Button" type="Button" parent="MessageNode/Shape/HFlowContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
shortcut = SubResource("Shortcut_3knyk")
text = "Action2"

[node name="ClickAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_0ptl6")
volume_db = -5.0

[connection signal="pressed" from="MessageNode/Shape/HFlowContainer/Action1Button" to="." method="_on_action_1_button_pressed"]
[connection signal="pressed" from="MessageNode/Shape/HFlowContainer/Action2Button" to="." method="_on_action_2_button_pressed"]
